# MCFileTypes

./: MCByteString.hs  MCFileTypes.cabal  MCGeneralized.hs  Test.hs  stack.yaml
